<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gojuon Drill</string>
    <string name="app_main_title">Gojuon Drill</string>
    <string name="app_exp_title">Experience Table</string>
    <string name="app_quiz_title">Gojuon Drill</string>
    
    <string name="menu_newquiz">Drill</string>
    <string name="menu_experience">Experience Table</string>
    <string name="menu_setting">Preference</string>
    <string name="menu_reset">Reset Exp</string>
    
    
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
   
    <string name="vocal_1">Seion</string>
    <string name="vocal_2">(Han)Dakuten </string>
    <string name="vocal_3">Youon </string>
    
    <string name="ok">Ok</string>
    <string name="phonic">Japanese Kana</string>
    
    <string name="alertDialog_title">Wraning</string>
    <string name="alertDialog_msg">Check one type to drill</string>
    
    <string name="EndDialog_title">Drill End</string>
    <string name="EndDialog_msg">Spend time:%d s</string>
    <!-- prefrence -->
    <string name="drill_number">Drill number</string>
    <string name="drill_type">Type</string>
    <string name="drill_setting">Drill preference</string>
    
    <string name="exp_tips">Slide to change Hiragana/Katakana </string>
     <string name="reset_rate">clart experience table </string>
     <string name="readme">readme_en.html</string>
    
    
</resources>
